@@ -6,6 +6,8 @@ Released ?????? ??, ????
 - Support for Cuba #678 (bthompson, dr-p)
 - Typechecking implementation, first release (HolidayBase, utils, some sample countries) #661 (dimbleby)
 - Test coverage improvement #633 (akosfurton, dr-p)
+- Drop support for UK subdivisions as countries (England, Scotland..) (dr-p)
+- Drop support for IsleOfMan as UK subdivision (dr-p)
 - Drop support for PortugalExt (ie: extended Portugal) (dr-p)
 - US fixes #675 (arkid15r)
 - Colombia fixes & test improvements #676 (bkthomps)
